cambiamos titulos, agregamos seccion "contactenos"

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Gaming | Juegos Baratos</title>
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=2.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/estilo.css">
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
     <link href="https://file.myfontastic.com/3j45yvRpaWhzeStdASehh9/icons.css" rel="stylesheet">
 </head>
 <body>
@@ -110,6 +111,23 @@
             </div>
         </section>
       
+        <div class="container-form">
+            <div class="info-form">
+                <h2 class="group__title">Contactanos</h2>
+                <p class="main_txt">Si tienes alguna duda o necesitas ayuda ponte en contacto con nosotros!</p>
+                <a href="#"> <i class="fa fa-phone"></i>968307298</a>
+                <a href="#"> <i class="fa fa-envelope"></i>oliver.price@inacapmail.com</a>
+                <a href="#"> <i class="fa fa-map-marked"></i>Concepcion, Chile</a>
+            </div>
+            <form action="#" autocomplete="off">   
+                <input type="text" name="nombre" placeholder="Ingresa tu nombre" class="campo">
+                <input type="email" name="email" placeholder="Ingresa tu email" class="campo">
+                <textarea name="mensaje" placeholder="Ingresa tu mensaje"></textarea>
+                <input type="submit" name="enviar" value="enviar mensaje" class="btn-enviar">
+            </form>
+        </div>
+
+
     </main>
     <footer class="main-footer">
         <div class="container container--flex">
