--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <ul class="menu" id="menu">
                 <li class="menu__item"><a href="/" class="menu__link menu__link--select">Inicio</a></li>
                 <li class="menu__item"><a href="nosotros.html" class="menu__link">Nosotros</a></li>
-                <li class="menu__item"><a href="galeria.html" class="menu__link">Galeria</a></li>
-                <li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
+                <li class="menu__item"><a href="#galeria1" class="menu__link">Galeria</a></li>
+                <li class="menu__item"><a href="#contacto1" class="menu__link">Contacto</a></li>
             </ul>
             <div class="social-icon">
                 <a href="" class="social-icon__link"><span class="icon-facebook"></span></a>
@@ -70,7 +70,6 @@
                         <li>Counter Strike</li>
                         <li>Terraria</li>
                     </ul>
-                    <a href="" class="btn btn--contact">Contact</a>
                 </div>
             </div>
         </section>
@@ -100,7 +99,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="galeria1">
             <h3 class="group__title">Galeria de Juegos</h3>
             <div class="galeria">
                 <img class="imgg" src="img/galeria1.PNG" alt="The Long Dark">
@@ -111,14 +110,14 @@
             </div>
         </section>
       
-        <div class="container-form">
+        <div class="container-form" id="contacto1">
             <div class="info-form">
                 <h2 class="group__title">Contactanos</h2>
                 <p class="main_txt">Si tienes alguna duda o necesitas ayuda ponte en contacto con nosotros!</p>
                 <a href="#"> <i class="fa fa-phone"></i>968307298</a>
                 <a href="#"> <i class="fa fa-envelope"></i>oliver.price@inacapmail.com</a>
                 <a href="#"> <i class="fa fa-map-marked"></i>Concepcion, Chile</a>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3195.364900027307!2d-73.02061852330705!3d-36.78580057599287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9669b4f520b0d6b5%3A0xd67843ec36e3a4d3!2zR3JhbmFkYSAzNDQsIENvbmNlcGNpw7NuLCBCw61vIELDrW8!5e0!3m2!1ses!2scl!4v1713631966934!5m2!1ses!2scl" width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3195.364900027307!2d-73.02061852330705!3d-36.78580057599287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9669b4f520b0d6b5%3A0xd67843ec36e3a4d3!2zR3JhbmFkYSAzNDQsIENvbmNlcGNpw7NuLCBCw61vIELDrW8!5e0!3m2!1ses!2scl!4v1713631966934!5m2!1ses!2scl" width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <form action="#" autocomplete="off">   
                 <input type="text" name="nombre" placeholder="Ingresa tu nombre" class="campo">
@@ -134,7 +133,7 @@
         <div class="container container--flex">
             <div class="column column--33">
                 <h2 class="column__title">Visitanos</h2>
-                <p class="column__txt">----------------</p>
+                <p class="visit"><p><a href="https://www.google.com/maps?ll=-36.785805,-73.018044&z=15&t=m&hl=es&gl=CL&mapclient=embed&q=Granada+344+Concepci%C3%B3n+B%C3%ADo+B%C3%ADo">Ubicacion</a></p>
             </div>
             <div class="column column--33">
                 <h2 class="column__title">Contactenos</h2>
