--- a/nosotros.html
+++ b/nosotros.html
@@ -12,15 +12,15 @@
     <header class="main-header">
         <div class="container container--flex">
             <div class="logo-container column column--50">
-                <h1 class="logo">Tu Pizza</h1>
+                <h1 class="logo">Gaming</h1>
             </div>
             <div class="main-header__contactInfo column column--50">
                 <p class="main-header__contactInfo__phone">
-                    <span class="icon-phone">999-9999
+                    <span class="icon-phone">968307298
                     </span>
                 </p>
                 <p class="main-header__contactInfo__addres">
-                    <span class="icon-location">Mi calle 123 Talcahuano</span>
+                    <span class="icon-location">Concepcion, Chile</span>
                 </p>
                 
             </div>
@@ -43,35 +43,35 @@
         </div>
     </nav>
     <section class="banner">
-        <img src="img/banner_about.jpg" alt="" class="banner__img">
-        <div class="banner__content">Nuestra casa es tu casa</div>
+        <img src="img/gaming-banner.jpg" alt="" class="banner__img">
+        <div class="banner__content">¡Los juegos mas baratos del mercado!</div>
     </section>
     <main class="main">
         <section class="group--color">
             <div class="container">
                 <h2 class="main__title">Nuestro Team</h2>
                 <p class="main_txt">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, repudiandae ea optio eligendi aut odio.
+                    Somos una empresa de rápido crecimiento ubicada en paises de Latinoamerica con un equipo de 3 expertos en desarrollo de videojuegos y desarrollo web.
                 </p>
             </div>
         </section>
       	<section class="group our-team">
-      		<h2 class="group__title">Los Chefs</h2>
+      		<h2 class="group__title">Equipo de soporte</h2>
       		<div class="container container--flex">
       			<div class="column column--33">
-      				<h3 class="our-team__title">Javier</h3>
-      				<img src="img/chef1.jpg" alt="" class="our-team__img">
-      				<p class="our-team__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem quidem ratione facere facilis aut magni atque asperiores molestiae, qui quos ipsa consectetur blanditiis quia, deleniti unde est repudiandae sint veniam.</p>
+      				<h3 class="our-team__title">Jacob Minkoff</h3>
+      				<img src="img/persona1.jpg" alt="" class="our-team__img">
+      				<p class="our-team__txt">Jacob Minkoff es director de juego en That's No Moon en Los Ángeles, CA. Jacob se graduó con un BFA de la Escuela de Artes Visuales de Nueva York, donde se formó en cine y efectos visuales. Entró en la industria de los juegos con experiencia en modding y fue uno de los tres miembros fundadores de Blue Omega Entertainment.</p>
       			</div>
       			<div class="column column--33">
-      				<h3 class="our-team__title">Marta</h3>
-      				<img src="img/chef2.jpg" alt="" class="our-team__img">
-      				<p class="our-team__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem quas sit facilis. Ea similique tenetur necessitatibus doloribus repellendus, nesciunt possimus iure, vero, aspernatur blanditiis neque. Earum sint, reprehenderit recusandae ea!</p>
+      				<h3 class="our-team__title">Jade Raymond</h3>
+      				<img src="img/persona2.jpg" alt="" class="our-team__img">
+      				<p class="our-team__txt">Ejecutivo de videojuegos con una trayectoria comprobada en la creación de múltiples franquicias originales multimillonarias, fundando estudios de desarrollo AAA y liderando producciones a gran escala. -Más de 20 años de experiencia práctica desempeñando roles clave en programación, diseño, producción, jefe de estudio y trabajos ejecutivos.</p>
       			</div>
       			<div class="column column--33">
-      				<h3 class="our-team__title">Ricardo</h3>
-      				<img src="img/chef3.jpg" alt="" class="our-team__img">
-      				<p class="our-team__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, at delectus tempora alias velit facilis eius debitis cupiditate molestias reiciendis. Quam voluptatibus nostrum sapiente blanditiis non commodi aperiam minima accusamus!</p>
+      				<h3 class="our-team__title">Guido Van Rossum</h3>
+      				<img src="img/persona3.webp" alt="" class="our-team__img">
+      				<p class="our-team__txt">Guido van Rossum es un programador holandés conocido como el creador del lenguaje de programación Python. Desde su creación en 1989, Python ha sido adoptado por programadores de todo el mundo y es utilizado en una amplia gama de aplicaciones.</p>
       			</div>
       		</div>
       	</section>
@@ -81,12 +81,12 @@
         <div class="container container--flex">
             <div class="column column--33">
                 <h2 class="column__title">Visitanos</h2>
-                <p class="column__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat illo atque impedit, repudiandae </p>
+                <p><a href="https://www.google.com/maps?ll=-36.785805,-73.018044&z=15&t=m&hl=es&gl=CL&mapclient=embed&q=Granada+344+Concepci%C3%B3n+B%C3%ADo+B%C3%ADo">Ubicacion</a></p>
             </div>
             <div class="column column--33">
                 <h2 class="column__title">Contactenos</h2>
-                <p class="column__txt">Mi calle 123 Talcahuano</p>
-                <p class="column__txt">Telefono: 999-999-999</p>
+                <p class="column__txt">Granada 344, Concepcion</p>
+                <p class="column__txt">Telefono: 968307298</p>
                
             </div>
             <div class="column column--33">
@@ -95,7 +95,7 @@
                 <p class="column__txt"><a href="" class="icon-twitter">Twitter</a></p>
                 <p class="column__txt"><a href="" class="icon-instagram">Instagram</a></p>
             </div>
-            <p class="copy">@ 2020 Tu Pizza | Todos los derechos reservados</p>
+            <p class="copy">@ 2024 Oliver Price | Todos los derechos reservados</p>
         </div>
     </footer>
     <script src="js/menu.js"></script>
